About主文重寫：去公司名、強化思想演進敘事

--- a/translations/en.json
+++ b/translations/en.json
@@ -54,10 +54,10 @@
   "projects.tag.cognitive": "Cognitive Infrastructure",
   "projects.tag.independence": "Independent Voice",
   "about.name": "Paul Kuo 郭曜郎",
-  "about.intro": "My thinking begins not with technology, but with order.",
-  "about.p1": "Fifteen years of theological training instilled a persistent question: amid chaos, what structures can bear meaning? This question led me out of seminary and into entrepreneurship — not because I abandoned faith, but because I wanted to test in the real world whether order can be rebuilt, not merely theorized.",
-  "about.p2": "From startup accelerators to food supply chains to sustainable architecture, I spent over a decade working across industries on the same question: system regeneration is not a technical problem — it is a trust problem. Whoever is willing to bear the risk of transformation determines the shape of the new order.",
-  "about.p3": "Now, my work spans Taiwan-Japan industrial cooperation and data infrastructure for the circular economy. AI is indispensable in this process — but my deeper concern remains: as technology redraws the boundaries of individual capability, how do people retain their capacity for judgment, creation, and responsibility? Order is worth rebuilding, but not at the cost of dignity.",
+  "about.intro": "My starting point is not technology — it is order.",
+  "about.p1": "Fifteen years of theological training taught me to ask one question: amid chaos and acceleration, what kind of structure can truly bear meaning? That question led me out of seminary and into entrepreneurship — not because I abandoned faith, but because I wanted to test in the real world whether order and ethics can be rebuilt.",
+  "about.p2": "From the formation of startup ecosystems, to the restructuring of food-agriculture supply chains, to sustainable architecture and spatial practice — I spent over a decade understanding that systemic regeneration is never merely a technical problem. It is the building of trust and responsibility. To bear the risk of transformation is to participate in the shaping of a new order.",
+  "about.p3": "Now I work at the intersection of cross-border industry collaboration and regenerative systems, while building CircleFlow as a data infrastructure for the circular economy. AI is a necessary tool in this work, but not its purpose. What I truly care about is this: as technology redraws the boundaries of individual capability, how do people retain the capacity for judgment, creation, and responsibility — rather than being reduced by the logic of efficiency into mere nodes.",
   "about.timeline.2026": "CircleFlow Founder · Taiwan-Japan Cross-domain Collaboration",
   "about.timeline.2020": "Banmu Tang VP · Regenerative Architecture",
   "about.timeline.2018": "Howsfood · Sustainable Agriculture Supply Chain",
