--- a/translations/ja.json
+++ b/translations/ja.json
@@ -55,9 +55,9 @@
   "projects.tag.independence": "独立発信",
   "about.name": "Paul Kuo 郭曜郎",
   "about.intro": "私の思考の出発点は技術ではなく、秩序である。",
-  "about.p1": "十五年間の神学訓練は、一つの問いを問い続ける習慣を私に植え付けた：混沌の中で、どのような構造が意味を支えうるのか。この問いが私を神学院から起業の世界へと導いた——信仰を捨てたからではなく、秩序は単に論じられるのではなく再構築できるのかを、現実世界で検証したかったからである。",
-  "about.p2": "スタートアップ・アクセラレーター、食農サプライチェーン、サステナブル建築——十数年にわたり異なる産業で同じ問いに向き合ってきました。システムの再生は技術の問題ではなく、信頼の問題です。変革のリスクを引き受ける者が、新しい秩序の形を決めるのです。",
-  "about.p3": "現在は台日産業協力と循環経済のデータ基盤整備に携わっています。AIはこのプロセスに不可欠ですが、より深い関心は常に：テクノロジーが個人の能力の境界を引き直す時、人はいかにして判断力、創造力、責任を担う力を保持できるか。秩序は再建に値しますが、尊厳を犠牲にしてではありません。",
+  "about.p1": "15年の神学訓練が私に一つの問いを習慣づけた。混乱と加速の中で、どのような構造が本当に意味を支えられるのか。この問いが私を神学院から起業の世界へと導いた。信仰を捨てたからではなく、現実世界で検証したかったからだ——秩序と倫理は再び建て直せるのかを。",
+  "about.p2": "スタートアップ・エコシステムの形成から、食農サプライチェーンの再構築、そして持続可能な建築と空間実践に至るまで、十数年をかけて理解したことがある。システムの再生は単なる技術の問題ではなく、信頼と責任の構築である。変革のリスクを引き受けることは、新しい秩序の形成に参加することだ。",
+  "about.p3": "現在、私は越境産業と再生システムの領域で協力を推進しながら、CircleFlowを循環経済のデータインフラとして構築している。AIはその中で必要なツールだが、目的ではない。私が本当に関心を持っているのは、技術が個人の能力の境界を引き直すとき、人はいかにして判断力、創造力、責任を担う力を保ち続けられるか——効率の論理によって単なるノードに簡略化されることなく。",
   "about.timeline.2026": "CircleFlow 創業者 · 台日クロスドメイン協力",
   "about.timeline.2020": "半畝塘 副総経理 · サステナブル建築・再生戦略",
   "about.timeline.2018": "厚生市集 · サステナブル食農サプライチェーン",
