--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -69,10 +69,10 @@
   "projects.tag.api": "API",
   "projects.tag.voice": "独立发声",
   "about.name": "Paul Kuo 郭曜郎",
-  "about.intro": "我的思考起点不是技术，是秩序。",
-  "about.p1": "十五年的神学训练让我习惯追问一个问题：在混乱中，什么样的结构能承载意义？这个问题带我离开神学院，走进创业——不是因为放弃了信仰，而是因为我想在真实世界里验证：秩序能不能被重新建造，而不只是被论述。",
-  "about.p2": "从创业加速器、食农供应链、到永续建筑，我花了十多年时间在不同的产业里处理同一件事：系统的再生不是技术问题，是信任问题。谁愿意承担转型的风险，谁就决定了新秩序的形状。",
-  "about.p3": "现在，我的工作横跨台日产业合作与循环经济的数据基础设施。人工智能在这个过程中不可或缺——但我更关心的始终是：当个体的能力边界被技术重新划定，人如何保有判断、创造与承担责任的能力。秩序值得被重建，但不是以牺牲尊严为代价。",
+  "about.intro": "我的思考起点不是技术，而是秩序。",
+  "about.p1": "十五年的神学训练，让我习惯追问一个问题：在混乱与加速之中，什么样的结构能真正承载意义？这个问题带我离开神学院，走进创业。不是因为放弃信仰，而是因为我想在真实世界里验证——秩序与伦理是否能重新建造。",
+  "about.p2": "从创业生态的形成、食农供应链的重构，到永续建筑与空间实践，我花了十多年时间理解：系统的再生从来不是单纯的技术问题，而是信任与责任的建立。愿意承担转型的风险，就是参与了新秩序的塑形。",
+  "about.p3": "现在，我在跨境产业与再生系统的场域中推动合作，同时建构 CircleFlow 作为循环经济的数据基础设施。人工智能在其中是必要的工具，但不是目的。我真正关心的是：当技术重新划定个体能力的边界，人如何仍然保有判断、创造与承担的能力，而不被效率的逻辑简化成一个节点。",
   "about.tl.2026": "秩序如何在物质流与跨文化信任中重新站立",
   "about.tl.2020": "在建筑与土地中理解再生的物质条件",
   "about.tl.2018": "供应链教会我：系统的瓶颈永远在信任",
