--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -69,10 +69,10 @@
   "projects.tag.api": "API",
   "projects.tag.voice": "獨立發聲",
   "about.name": "Paul Kuo 郭曜郎",
-  "about.intro": "我的思考起點不是技術，是秩序。",
-  "about.p1": "十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。",
-  "about.p2": "從創業加速器、食農供應鏈、到永續建築，我花了十多年時間在不同的產業裡處理同一件事：系統的再生不是技術問題，是信任問題。誰願意承擔轉型的風險，誰就決定了新秩序的形狀。",
-  "about.p3": "現在，我的工作橫跨台日產業合作與循環經濟的數據基礎設施。人工智慧在這個過程中不可或缺——但我更關心的始終是：當個體的能力邊界被技術重新劃定，人如何保有判斷、創造與承擔責任的能力。秩序值得被重建，但不是以犧牲尊嚴為代價。",
+  "about.intro": "我的思考起點不是技術，而是秩序。",
+  "about.p1": "十五年的神學訓練，讓我習慣追問一個問題：在混亂與加速之中，什麼樣的結構能真正承載意義？這個問題帶我離開神學院，走進創業。不是因為放棄信仰，而是因為我想在真實世界裡驗證——秩序與倫理是否能重新建造。",
+  "about.p2": "從創業生態的形成、食農供應鏈的重構，到永續建築與空間實踐，我花了十多年時間理解：系統的再生從來不是單純的技術問題，而是信任與責任的建立。願意承擔轉型的風險，就是參與了新秩序的塑形。",
+  "about.p3": "現在，我在跨境產業與再生系統的場域中推動合作，同時建構 CircleFlow 作為循環經濟的數據基礎設施。人工智慧在其中是必要的工具，但不是目的。我真正關心的是：當技術重新劃定個體能力的邊界，人如何仍然保有判斷、創造與承擔的能力，而不被效率的邏輯簡化成一個節點。",
   "about.tl.2026": "秩序如何在物質流與跨文化信任中重新站立",
   "about.tl.2020": "在建築與土地中理解再生的物質條件",
   "about.tl.2018": "供應鏈教會我：系統的瓶頸永遠在信任",
