--- a/translations/ja.json
+++ b/translations/ja.json
@@ -66,7 +66,7 @@
   "about.timeline.seminary": "中華福音神学院 · 神学訓練",
   "about.pillars.title": "Five Pillars ファイブ・ピラー",
   "about.pillar.ai.desc": "AGI経路、AI×産業応用、マルチモデル協調、個人能力境界の再形成",
-  "about.pillar.circular.desc": "循環型経済、炭素取引、都市鉱山、PCB金属回収、ESGガバナンス",
+  "about.pillar.circular.desc": "循環型経済、炭素取引、都市鉱山、PCB回収、ESGガバナンス",
   "about.pillar.faith.desc": "神学×社会統治、哲学批判、疲労社会、ニーバー、マルクーゼ",
   "about.pillar.startup.desc": "二十年の起業実戦、投資エコシステム批判、台湾起業環境、AppWorks経験",
   "about.pillar.life.desc": "読書ノート、子育て、セーリング、家族の記憶、異文化探究",
@@ -112,7 +112,7 @@
   "blog.page.life1.title": "法器が母のために受け止めた重さ：あの余分な六年間",
   "blog.page.life1.desc": "人生には、効率では処理できない重さがある。",
   "blog.page.life2.title": "天命を知る年に、台湾と海との深い絆を目の当たりにして",
-  "blog.page.life2.desc": "安平の帆船の上で、この島との間にまだ語り尽くせない物語があることに気づいた。",
+  "blog.page.life2.desc": "運動を通じて身体とこの島のつながりを再び感じ、まだ語り尽くせない物語があることに気づいた。",
   "feed.title": "Live Feed",
   "feed.subtitle": "8つのプラットフォームからのリアルタイム更新。",
   "projects.circleflow.desc.short": "循環経済のデータ基盤——資源の流れ、価値、帰属を再び可視化・追跡可能・ガバナンス可能にする。",
