--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -136,7 +136,7 @@
   "blog.life1.title": "法器替母亲挡下的重量：那多出来的六年",
   "blog.life1.desc": "生命中有些重量，不是用效率可以处理的。",
   "blog.life2.title": "到知天命之年，才见证台湾与海洋的深厚联系",
-  "blog.life2.desc": "安平的帆船上，才发现自己跟这座岛屿还有太多没说完的故事。",
+  "blog.life2.desc": "在运动中重新感受身体与这座岛屿的连结，才发现还有太多没说完的故事。",
   "feed.title": "Live Feed",
   "feed.subtitle": "来自 8 个平台的即时动态。",
   "hero.title": "在智能时代<br>重建<em>秩序</em>",
