--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -136,7 +136,7 @@
   "blog.life1.title": "法器替母親擋下的重量：那多出來的六年",
   "blog.life1.desc": "生命中有些重量，不是用效率可以處理的。",
   "blog.life2.title": "到知天命之年，才見證台灣與海洋的深厚聯繫",
-  "blog.life2.desc": "安平的帆船上，才發現自己跟這座島嶼還有太多沒說完的故事。",
+  "blog.life2.desc": "在運動中重新感受身體與這座島嶼的連結，才發現還有太多沒說完的故事。",
   "feed.title": "Live Feed",
   "feed.subtitle": "來自 8 個平台的即時動態。",
   "hero.title": "Rebuilding <em>Order</em><br>in an Age of<br>Intelligence",
