--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -72,7 +72,7 @@
   "about.intro": "我的思考起點不是技術，而是秩序。",
   "about.p1": "十五年的神學訓練，讓我習慣追問一個問題：在混亂與加速之中，什麼樣的結構能真正承載意義？這個問題帶我離開神學院，走進創業。不是因為放棄信仰，而是因為我想在真實世界裡驗證——秩序與倫理是否能重新建造。",
   "about.p2": "從創業生態的形成、食農供應鏈的重構，到永續建築與空間實踐，我花了十多年時間理解：系統的再生從來不是單純的技術問題，而是信任與責任的建立。願意承擔轉型的風險，就是參與了新秩序的塑形。",
-  "about.p3": "現在，我在跨境產業與再生系統的場域中推動合作，同時建構 CircleFlow 作為循環經濟的數據基礎設施。人工智慧在其中是必要的工具，但不是目的。我真正關心的是：當技術重新劃定個體能力的邊界，人如何仍然保有判斷、創造與承擔的能力，而不被效率的邏輯簡化成一個節點。",
+  "about.p3": "現在，我的工作是跨領域的台日產業合作與循環經濟的數據基礎設施建構。此外，隨著人工智慧在近年迅速成為基礎設施的一部分，技術正在重新界定能力與決策的尺度。",
   "about.tl.2026": "秩序如何在物質流與跨文化信任中重新站立",
   "about.tl.2020": "在建築與土地中理解再生的物質條件",
   "about.tl.2018": "供應鏈教會我：系統的瓶頸永遠在信任",
@@ -146,5 +146,6 @@
   "projects.content.sig": "話語秩序正在被平台與演算法重新分配。這個基礎設施處理的問題是：一個人如何在不依賴任何單一平台的前提下，維持思想輸出的獨立性與持續性。",
   "projects.debate.desc.short": "當個體必須在資訊過載中做出判斷，什麼樣的認知結構能提供更可靠的思考支撐。",
   "projects.sig.label": "Structural Significance",
-  "projects.tag.biomedical": "生醫"
+  "projects.tag.biomedical": "生醫",
+  "about.p4": "技術本身沒有意圖，但效率的邏輯若缺乏節制，往往會壓縮人的判斷與承擔空間。因此，我不只關心技術能走多快，而是人是否仍能在加速之中保有尊嚴與主體性。"
 }
