--- a/translations/en.json
+++ b/translations/en.json
@@ -57,7 +57,7 @@
   "about.intro": "My starting point is not technology — it is order.",
   "about.p1": "Fifteen years of theological training taught me to ask one question: amid chaos and acceleration, what kind of structure can truly bear meaning? That question led me out of seminary and into entrepreneurship — not because I abandoned faith, but because I wanted to test in the real world whether order and ethics can be rebuilt.",
   "about.p2": "From the formation of startup ecosystems, to the restructuring of food-agriculture supply chains, to sustainable architecture and spatial practice — I spent over a decade understanding that systemic regeneration is never merely a technical problem. It is the building of trust and responsibility. To bear the risk of transformation is to participate in the shaping of a new order.",
-  "about.p3": "Now I work at the intersection of cross-border industry collaboration and regenerative systems, while building CircleFlow as a data infrastructure for the circular economy. AI is a necessary tool in this work, but not its purpose. What I truly care about is this: as technology redraws the boundaries of individual capability, how do people retain the capacity for judgment, creation, and responsibility — rather than being reduced by the logic of efficiency into mere nodes.",
+  "about.p3": "My current work spans cross-border industry collaboration between Taiwan and Japan, and building CircleFlow as a data infrastructure for the circular economy. As AI rapidly becomes part of our foundational infrastructure, technology is redefining the scale of capability and decision-making.",
   "about.timeline.2026": "CircleFlow Founder · Taiwan-Japan Cross-domain Collaboration",
   "about.timeline.2020": "Banmu Tang VP · Regenerative Architecture",
   "about.timeline.2018": "Howsfood · Sustainable Agriculture Supply Chain",
@@ -138,5 +138,6 @@
   "projects.content.desc": "When discourse power is monopolized by algorithms, independent expression requires its own infrastructure.",
   "projects.content.sig": "Discourse order is being redistributed by platforms and algorithms. This infrastructure addresses the question: how can an individual maintain the independence and continuity of intellectual output without depending on any single platform?",
   "projects.tajp.sig": "When industrial cooperation crosses borders, obstacles often lie not in technology but in differences of institutions, culture, and risk perception. This work addresses trust order — how to build sustainable cooperative structures across civilizational contexts, turning the flow of technology and value into long-term institutions rather than short-term opportunities.",
-  "blog.life2.desc": "Through physical movement, I reconnected with this island and realized there are still so many unfinished stories."
+  "blog.life2.desc": "Through physical movement, I reconnected with this island and realized there are still so many unfinished stories.",
+  "about.p4": "Technology itself has no intent, but the logic of efficiency, left unchecked, tends to compress the space for human judgment and responsibility. What I care about is not how fast technology can move, but whether people can still retain dignity and agency amid the acceleration."
 }
