--- a/translations/ja.json
+++ b/translations/ja.json
@@ -57,7 +57,7 @@
   "about.intro": "私の思考の出発点は技術ではなく、秩序である。",
   "about.p1": "15年の神学訓練が私に一つの問いを習慣づけた。混乱と加速の中で、どのような構造が本当に意味を支えられるのか。この問いが私を神学院から起業の世界へと導いた。信仰を捨てたからではなく、現実世界で検証したかったからだ——秩序と倫理は再び建て直せるのかを。",
   "about.p2": "スタートアップ・エコシステムの形成から、食農サプライチェーンの再構築、そして持続可能な建築と空間実践に至るまで、十数年をかけて理解したことがある。システムの再生は単なる技術の問題ではなく、信頼と責任の構築である。変革のリスクを引き受けることは、新しい秩序の形成に参加することだ。",
-  "about.p3": "現在、私は越境産業と再生システムの領域で協力を推進しながら、CircleFlowを循環経済のデータインフラとして構築している。AIはその中で必要なツールだが、目的ではない。私が本当に関心を持っているのは、技術が個人の能力の境界を引き直すとき、人はいかにして判断力、創造力、責任を担う力を保ち続けられるか——効率の論理によって単なるノードに簡略化されることなく。",
+  "about.p3": "現在、私の仕事は台日間の越境産業協力と、循環経済のデータインフラとしてのCircleFlow構築にまたがっている。AIが急速にインフラの一部となる中、技術は能力と意思決定の尺度を再定義しつつある。",
   "about.timeline.2026": "CircleFlow 創業者 · 台日クロスドメイン協力",
   "about.timeline.2020": "半畝塘 副総経理 · サステナブル建築・再生戦略",
   "about.timeline.2018": "厚生市集 · サステナブル食農サプライチェーン",
@@ -137,5 +137,6 @@
   "projects.brand.sig": "言論秩序はプラットフォームとアルゴリズムによって再分配されている。この基盤が扱う問いは：いかにして特定のプラットフォームに依存せず、思想発信の独立性と持続性を維持できるか。",
   "projects.content.desc": "言論権がアルゴリズムに独占される時、独立した表現には独自の基盤が必要。",
   "projects.content.sig": "言論秩序はプラットフォームとアルゴリズムによって再分配されている。この基盤が扱う問いは：いかにして特定のプラットフォームに依存せず、思想発信の独立性と持続性を維持できるか。",
-  "projects.tajp.sig": "産業協力が国境を越える時、障壁は技術ではなく制度・文化・リスク認知の差異にある。この仕事が扱うのは信頼秩序——異なる文明的コンテクストにおいていかに持続可能な協力構造を構築し、技術と価値の流動を短期的機会ではなく長期的制度にできるか。"
+  "projects.tajp.sig": "産業協力が国境を越える時、障壁は技術ではなく制度・文化・リスク認知の差異にある。この仕事が扱うのは信頼秩序——異なる文明的コンテクストにおいていかに持続可能な協力構造を構築し、技術と価値の流動を短期的機会ではなく長期的制度にできるか。",
+  "about.p4": "技術そのものに意図はないが、効率の論理に歯止めがなければ、人の判断と責任の空間は圧縮されがちだ。私が関心を持つのは技術がどれだけ速く進めるかではなく、加速の中で人が尊厳と主体性を保てるかどうかである。"
 }
