Timeline反轉為正序+文字重寫為思想演進敘事

--- a/translations/en.json
+++ b/translations/en.json
@@ -127,12 +127,12 @@
   "about.pillars.startup.desc": "Entrepreneurship is not just building products — it is building order in the real world. Trust, risk, and the distillation of methodology",
   "about.pillars.life.title": "Reflections & Memory",
   "about.pillars.life.desc": "The things that cannot be quantified yet define a person. Reading, memory, and the weight of a life",
-  "about.tl.2026": "How order re-establishes itself through material flows and cross-cultural trust",
-  "about.tl.2020": "Understanding the material conditions of regeneration through architecture and land",
-  "about.tl.2018": "What supply chains taught me: the bottleneck is always trust",
-  "about.tl.2013": "Learning the cost of order through repeated collisions with the market",
-  "about.tl.2003": "Left seminary to test whether order can be rebuilt in the real world",
-  "about.tl.15y": "Theological Training · The Starting Point for Questions of Order and Meaning",
+  "about.tl.2026": "Restructuring the order of materials and trust as intelligence reshapes production and decision-making",
+  "about.tl.2020": "Verifying the material conditions of regeneration through spatial and land practice",
+  "about.tl.2018": "Confirming that trust is the core of any system through supply chain restructuring",
+  "about.tl.2013": "Learning the cost and limits of order through market trials",
+  "about.tl.2003": "Left seminary to test whether order can be built in the real world",
+  "about.tl.15y": "Theological training: the origin of questioning order and meaning",
   "projects.debate.sig": "A single model produces opinions; the collision of multiple models approaches judgment. This framework addresses cognitive order — when the speed of information production far exceeds human processing capacity, how can individuals maintain the structural conditions for independent thinking and reliable decision-making?",
   "projects.brand.sig": "Discourse order is being redistributed by platforms and algorithms. This infrastructure addresses the question: how can an individual maintain the independence and continuity of intellectual output without depending on any single platform?",
   "projects.content.desc": "When discourse power is monopolized by algorithms, independent expression requires its own infrastructure.",
