--- a/translations/ja.json
+++ b/translations/ja.json
@@ -127,12 +127,12 @@
   "about.pillars.startup.desc": "起業とは製品を作ることだけではなく、現実世界に秩序を建てること。信頼、リスク、方法論の蒸留",
   "about.pillars.life.title": "省察と記憶 Reflections & Memory",
   "about.pillars.life.desc": "数値化できないが、人を定義するもの。読書、記憶、そして生の重み",
-  "about.tl.2026": "物質の流れと異文化間の信頼の中で、秩序はどう再び立ち上がるか",
-  "about.tl.2020": "建築と土地を通じて、再生の物質的条件を理解する",
-  "about.tl.2018": "サプライチェーンが教えてくれたこと：システムのボトルネックは常に信頼にある",
-  "about.tl.2013": "市場との繰り返しの衝突の中で、秩序の代償を学ぶ",
-  "about.tl.2003": "神学校を離れ、現実世界で秩序の再構築が可能かを検証",
-  "about.tl.15y": "神学訓練 · 秩序と意味への問いの出発点",
+  "about.tl.2026": "知能が生産と意思決定を再形成する中で、物質と信頼の秩序を再構築する",
+  "about.tl.2020": "空間と土地の実践を通じて再生の物質的条件を検証する",
+  "about.tl.2018": "サプライチェーン再構築を通じ、信頼がシステムの核心であることを確認する",
+  "about.tl.2013": "市場の試練の中で秩序の代償と限界を理解する",
+  "about.tl.2003": "神学院を離れ、現実世界で秩序が建て直せるかを検証する",
+  "about.tl.15y": "神学訓練：秩序と意味を問う原点",
   "projects.debate.sig": "単一モデルの出力は見解にすぎず、複数モデルの衝突が判断に近づく。このフレームワークが扱うのは認知秩序——情報の生産速度が人間の処理能力を遥かに超える時、個人がいかにして独立した思考と信頼できる意思決定の構造的条件を維持できるか。",
   "projects.brand.sig": "言論秩序はプラットフォームとアルゴリズムによって再分配されている。この基盤が扱う問いは：いかにして特定のプラットフォームに依存せず、思想発信の独立性と持続性を維持できるか。",
   "projects.content.desc": "言論権がアルゴリズムに独占される時、独立した表現には独自の基盤が必要。",
