--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -73,12 +73,12 @@
   "about.p1": "十五年的神学训练，让我习惯追问一个问题：在混乱与加速之中，什么样的结构能真正承载意义？这个问题带我离开神学院，走进创业。不是因为放弃信仰，而是因为我想在真实世界里验证——秩序与伦理是否能重新建造。",
   "about.p2": "从创业生态的形成、食农供应链的重构，到永续建筑与空间实践，我花了十多年时间理解：系统的再生从来不是单纯的技术问题，而是信任与责任的建立。愿意承担转型的风险，就是参与了新秩序的塑形。",
   "about.p3": "现在，我的工作是跨领域的台日产业合作与循环经济的数据基础设施建构。此外，随着人工智能在近年迅速成为基础设施的一部分，技术正在重新界定能力与决策的尺度。",
-  "about.tl.2026": "秩序如何在物质流与跨文化信任中重新站立",
-  "about.tl.2020": "在建筑与土地中理解再生的物质条件",
-  "about.tl.2018": "供应链教会我：系统的瓶颈永远在信任",
-  "about.tl.2013": "在市场的反复碰撞中学习秩序的代价",
-  "about.tl.2003": "从神学院走入真实世界，验证秩序能否被重新建造",
-  "about.tl.15y": "神学训练 · 追问秩序与意义的起点",
+  "about.tl.2026": "在智能重塑生产与决策之际，重构物质与信任的秩序",
+  "about.tl.2020": "在空间与土地实践中验证再生的物质条件",
+  "about.tl.2018": "在供应链重构中确认信任是系统的核心",
+  "about.tl.2013": "在市场试炼中理解秩序的代价与边界",
+  "about.tl.2003": "离开神学院，在真实世界验证秩序是否可被建造",
+  "about.tl.15y": "神学训练 · 追问秩序与意义的原点",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能与秩序 Intelligence & Order",
   "about.pillars.ai.desc": "当机器开始参与判断，人与技术之间的秩序如何重新安排",
