--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -73,12 +73,12 @@
   "about.p1": "十五年的神學訓練，讓我習慣追問一個問題：在混亂與加速之中，什麼樣的結構能真正承載意義？這個問題帶我離開神學院，走進創業。不是因為放棄信仰，而是因為我想在真實世界裡驗證——秩序與倫理是否能重新建造。",
   "about.p2": "從創業生態的形成、食農供應鏈的重構，到永續建築與空間實踐，我花了十多年時間理解：系統的再生從來不是單純的技術問題，而是信任與責任的建立。願意承擔轉型的風險，就是參與了新秩序的塑形。",
   "about.p3": "現在，我的工作是跨領域的台日產業合作與循環經濟的數據基礎設施建構。此外，隨著人工智慧在近年迅速成為基礎設施的一部分，技術正在重新界定能力與決策的尺度。",
-  "about.tl.2026": "秩序如何在物質流與跨文化信任中重新站立",
-  "about.tl.2020": "在建築與土地中理解再生的物質條件",
-  "about.tl.2018": "供應鏈教會我：系統的瓶頸永遠在信任",
-  "about.tl.2013": "在市場的反覆碰撞中學習秩序的代價",
-  "about.tl.2003": "從神學院走入真實世界，驗證秩序能否被重新建造",
-  "about.tl.15y": "神學訓練 · 追問秩序與意義的起點",
+  "about.tl.2026": "在智能重塑生產與決策之際，重構物質與信任的秩序",
+  "about.tl.2020": "在空間與土地實踐中驗證再生的物質條件",
+  "about.tl.2018": "在供應鏈重構中確認信任是系統的核心",
+  "about.tl.2013": "在市場試煉中理解秩序的代價與邊界",
+  "about.tl.2003": "離開神學院，在真實世界驗證秩序是否可被建造",
+  "about.tl.15y": "神學訓練 · 追問秩序與意義的原點",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能與秩序 Intelligence & Order",
   "about.pillars.ai.desc": "當機器開始參與判斷，人與技術之間的秩序如何重新安排",
